--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     compile('com.bq.robotic:droid2ino:1.3@aar') {
         transitive = true
     }
-    compile('com.bq.robotic:drag_drop_grid:1.0@jar')
+    compile('com.bq.robotic:drag-drop-grid:1.0@jar')
 }
