[JOHNNYFIVE-80] Due to a problem with the maven-publish plugin in version of gradle greater than 1.10, the library now is created as an android library with resources: an aar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
         transitive = true
     }
     compile('com.android.support:gridlayout-v7:18.0.+')
-    compile('com.bq.robotic:drag-drop-grid:+@jar')
+//    compile('com.bq.robotic:drag-drop-grid:+@jar')
+    compile('com.bq.robotic:drag-drop-grid:+@aar')
     compile('com.nhaarman.supertooltips:library:3.0.+')
 }
