--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bq.robotic.robopad_plusplus"
-    android:versionCode="6"
-    android:versionName="1.6"
     android:installLocation="auto">
 
     <application
@@ -12,7 +10,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name="com.bq.robotic.robopad_plusplus.RoboPadSplashScreen"
+            android:name=".RoboPadSplashScreen"
             android:screenOrientation="landscape"
             android:label="@string/app_name" >
             <intent-filter>
@@ -23,13 +21,13 @@
         </activity>
 
         <activity
-            android:name="com.bq.robotic.robopad_plusplus.SelectRobotActivity"
+            android:name=".SelectRobotActivity"
             android:label="@string/title_activity_select_robot"
             android:screenOrientation="landscape">
         </activity>
         
         <activity
-            android:name="com.bq.robotic.robopad_plusplus.RoboPad_plusplus"
+            android:name=".RoboPad_plusplus"
             android:screenOrientation="landscape"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"/>
